--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@storybook/addon-a11y": "^6.3.4",
     "@storybook/addon-actions": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.4",
     "@storybook/addon-links": "^6.3.4",
@@ -24,7 +25,7 @@
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react-refresh": "^1.3.5",
     "babel-loader": "^8.2.2",
-    "storybook-addon-paddings": "^4.2.0",
+    "storybook-addon-jsx": "^7.3.12",
     "typescript": "^4.3.5",
     "vite": "^2.4.1"
   }
