--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
+    "build": "yarn build-storybook",
+    "serve": "serve storybook-static",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
@@ -25,6 +25,7 @@
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react-refresh": "^1.3.5",
     "babel-loader": "^8.2.2",
+    "serve": "^12.0.0",
     "storybook-addon-jsx": "^7.3.12",
     "typescript": "^4.3.5",
     "vite": "^2.4.1"
